# Kopilot-MCP

./: .gitignore  LICENSE  README.md  mcp_client.py  mcp_server.py  mcp_server_factory.py  pyproject.toml
config/: config.py
config/dev/: example.toml
scheme/: __init__.py  scheme.py
utils/: clients.py  helpers.py  models.py
